cash is updated with new response formate
