# src/controller/cash/cashController.ts
@@ -107,7 +107,7 @@ const crateCash = async (req: ExtendedRequest, res: Response) => {
 
     // if cash is available then update cash
     let updatedCash;
-    if (requestType === "cashIn") {
+    if (requestType === "cashIn" && cashInBalance > 0) {
       updatedCash = await prisma.cash.update({
         where: {
           shopOwnerId: req.shopOwner.id,
@@ -121,12 +121,12 @@ const crateCash = async (req: ExtendedRequest, res: Response) => {
               cashInAmount: cashInBalance,
               cashInFor: note,
               shopOwnerId: req.shopOwner.id,
-              cashInDate: date || new Date(),
+              cashInDate: new Date(date),
             },
           },
         },
       });
-    } else if (requestType === "cashOut") {
+    } else if (requestType === "cashOut" && cashOutBalance > 0) {
       updatedCash = await prisma.cash.update({
         where: {
           shopOwnerId: req.shopOwner.id,
@@ -140,13 +140,25 @@ const crateCash = async (req: ExtendedRequest, res: Response) => {
               cashOutAmount: cashOutBalance,
               cashOutFor: note,
               shopOwnerId: req.shopOwner.id,
-              cashOutDate: new Date(),
+              cashOutDate: new Date(date),
             },
           },
         },
       });
+    } else {
+      return res.status(400).json({
+        success: false,
+        errors: [
+          {
+            type: "bad request",
+            value: "",
+            msg: "Invalid request",
+          },
+        ],
+      });
     }
 
+    // Today Cash
     const cashNew = await prisma.cash.findUnique({
       where: {
         shopOwnerId: req.shopOwner.id,
@@ -156,10 +168,47 @@ const crateCash = async (req: ExtendedRequest, res: Response) => {
         },
       },
     });
+
+    // Today Cash In History
+    const cashInHistory = await prisma.cashInHistory.findMany({
+      where: {
+        shopOwnerId: req.shopOwner.id,
+        cashInDate: {
+          gte: startTime,
+          lte: endTime,
+        },
+      },
+    });
+
+    // Today Cash Out History
+    const cashOutHistory = await prisma.cashOutHistory.findMany({
+      where: {
+        shopOwnerId: req.shopOwner.id,
+        cashOutDate: {
+          gte: startTime,
+          lte: endTime,
+        },
+      },
+    });
+
+    const todayTotalCashIn = cashInHistory.reduce(
+      (acc, curr) => acc + curr.cashInAmount,
+      0
+    );
+
+    const todayTotalCashOut = cashOutHistory.reduce(
+      (acc, curr) => acc + curr.cashOutAmount,
+      0
+    );
+
     return res.status(200).json({
       success: true,
-      message: "cash updated",
-      cash: cashNew,
+      message: "cash updated successfully",
+      todayCashBalance: cashNew.cashBalance,
+      todayTotalCashOut,
+      todayTotalCashIn,
+      cashInHistory,
+      cashOutHistory,
     });
   } catch (error) {
     console.log({ error });
@@ -180,22 +229,21 @@ const crateCash = async (req: ExtendedRequest, res: Response) => {
 
 const createManyCash = async (req: ExtendedRequest, res: Response) => {
   try {
-    const  createIt =
-      req.body as {
-        cashInBalance: number;
-        cashOutBalance: number;
-        note: string;
-        requestType: "cashIn" | "cashOut";
-        date: Date;
-      }[];
+    const createIt = req.body as {
+      cashInBalance: number;
+      cashOutBalance: number;
+      note: string;
+      requestType: "cashIn" | "cashOut";
+      date: Date;
+    }[];
 
-      const cash = await prisma.cash.findMany({
-        distinct: ['shopOwnerId'],
-      })
-      
-console.log(cash)
-return res.json({success: true, cash})
-    } catch (error) {
+    const cash = await prisma.cash.findMany({
+      distinct: ["shopOwnerId"],
+    });
+
+    console.log(cash);
+    return res.json({ success: true, cash });
+  } catch (error) {
     console.log({ error });
     return res.status(500).json({
       success: false,
@@ -204,11 +252,11 @@ return res.json({success: true, cash})
           type: "server error",
           value: "",
           msg: "Internal server error",
-        }
-      ]
+        },
+      ],
     });
   }
-}
+};
 
 const getAllCash = async (req: ExtendedRequest, res: Response) => {
   try {
@@ -230,7 +278,7 @@ const getAllCash = async (req: ExtendedRequest, res: Response) => {
       });
     }
     console.log({ cashLen: cash.length });
-    return res.json({ success: true, cashLen: cash.length,cash });
+    return res.json({ success: true, cashLen: cash.length, cash });
   } catch (error) {
     console.log({ error });
     return res.status(500).json({
@@ -303,5 +351,124 @@ const getTodayCash = async (req: ExtendedRequest, res: Response) => {
     });
   }
 };
+
+// Get Today Cash In and Cash Out History of Shop Owner
+
+// Get Cash In History of Shop Owner using cash id
+const getTodayCashInHistory = async (req: ExtendedRequest, res: Response) => {
+  try {
+    const today = req.params.today;
+    const startDate = new Date(today);
+    startDate.setHours(0, 0, 0, 0);
+    const endDate = new Date(today);
+    endDate.setHours(23, 59, 59, 999);
+
+    const cashInHistory = await prisma.cashInHistory.findMany({
+      where: {
+        shopOwnerId: req.shopOwner.id,
+        cashInDate: {
+          gte: startDate,
+          lte: endDate,
+        },
+      },
+    });
+
+    // if cashInHistory is not available then return error
+    if (!cashInHistory) {
+      return res.status(404).json({
+        success: false,
+        errors: [
+          {
+            type: "not found",
+            value: "",
+            msg: "Cash In History not found",
+          },
+        ],
+      });
+    }
+
+    const todayTotalCashIn = cashInHistory.reduce(
+      (acc, curr) => acc + curr.cashInAmount,
+      0
+    );
+
+    return res.json({ success: true, cashInHistory, todayTotalCashIn });
+  } catch (error) {
+    console.log(error);
+    return res.status(500).json({
+      success: false,
+      errors: [
+        {
+          type: "server error",
+          value: "",
+          msg: "Internal server error",
+        },
+      ],
+    });
+  }
+};
+
+// Get Cash Out History of Shop Owner using cash id
+
+const getTodayCashOutHistory = async (req: ExtendedRequest, res: Response) => {
+  try {
+    const today = req.params.today;
+    const startDate = new Date(today);
+    startDate.setHours(0, 0, 0, 0);
+    const endDate = new Date(today);
+    endDate.setHours(23, 59, 59, 999);
+
+    const cashOutHistory = await prisma.cashOutHistory.findMany({
+      where: {
+        shopOwnerId: req.shopOwner.id,
+        cashOutDate: {
+          gte: startDate,
+          lte: endDate,
+        },
+      },
+    });
+
+    // if cashOutHistory is not available then return error
+    if (!cashOutHistory) {
+      return res.status(404).json({
+        success: false,
+        errors: [
+          {
+            type: "not found",
+            value: "",
+            msg: "Cash Out History not found",
+          },
+        ],
+      });
+    }
+
+    const todayTotalCashOut = cashOutHistory.reduce(
+      (acc, curr) => acc + curr.cashOutAmount,
+      0
+    );
+
+    return res.json({ success: true, cashOutHistory, todayTotalCashOut });
+  } catch (error) {
+    console.log(error);
+    return res.status(500).json({
+      success: false,
+      errors: [
+        {
+          type: "server error",
+          value: "",
+          msg: "Internal server error",
+        },
+      ],
+    });
+  }
+};
+
 prisma.$disconnect();
-export { crateCash, getAllCash, getTodayCash, createManyCash };
+export {
+  crateCash,
+  getAllCash,
+  getTodayCash,
+  createManyCash,
+  getTodayCashInHistory,
+  getTodayCashOutHistory,
+};
